[package]
name = "rtclib"
version = "0.1.0"
authors = ["Lazarus404 <me@jah.red>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
md5 = "0.7.0"
crc = "3.0.0"
hmac-sha1 = "0.1.3"
nom = "7.1"
bytes = "1.1"
enum_primitive = "*"
num = "*"
